# chess

./: .gitignore  CMakeLists.txt  Practice - Carl  README.md  makefile  sam.docx
include/: Board.h  BoardState.h  Evaluation.h  Game_Tree.h  Move.h  Piece.h  Search.h  uci.h
snippets/: debug.cpp
src/: Board.cpp  Board.h  Cache.h  Evaluation.cpp  Evaluation.h  FEN.cpp  Game_Tree.cpp  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  Movement.h  Piece.cpp  Piece.h  Search.cpp  Search.h  Search_bak.cpp  compiling_error.txt  main.cpp  uci.cpp
test/: board.cpp  perft.cpp  pertf.h  test.cpp  tests.cpp
